tests/fixtures/invalid/pow_list_float_none.py
# Cannot call pow() with List[int], Float, None
x = pow([1, 2, 3], 1.0, None)
